--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,17 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Retest4"
-        android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".Chiffre"/>
+        android:theme="@style/Theme.Retest4">
+        <activity android:name=".coloriageActivity"/>
+        <activity android:name=".numeraActivity" />
+        <activity android:name=".lettreActivity" />
+        <activity android:name=".formeActivity" />
+        <activity android:name=".Chiffre" />
         <activity android:name=".CouleurActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
