--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Retest4">
-        <activity android:name=".Coloriage_mene_kaaea"></activity>
+        <activity android:name=".Coloriage_poti_pukiki_tokatoka_ereere"></activity>
+        <activity android:name=".Coloriage_poti_toka" />
+        <activity android:name=".Coloriage_mene_keekee_kaaea" />
         <activity android:name=".Coloriage_mene_keekee" />
         <activity android:name=".Coloriage_mene" />
         <activity android:name=".Coloriage_poti_puki" />
