--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Retest4">
-        <activity android:name=".Coloriage_poti_pukiki_tokatoka_ereere"></activity>
+
+        <activity android:name=".Coloriage_poti_pukiki_tokatoka_ereere"/>
         <activity android:name=".Coloriage_poti_toka" />
         <activity android:name=".Coloriage_mene_keekee_kaaea" />
         <activity android:name=".Coloriage_mene_keekee" />
         <activity android:name=".Coloriage_mene" />
         <activity android:name=".Coloriage_poti_puki" />
         <activity android:name=".Coloriage_poti" />
+
         <activity android:name=".Page_de_demarrage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +26,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".coloriageActivity" />
         <activity android:name=".numeraActivity" />
         <activity android:name=".lettreActivity" />
         <activity android:name=".formeActivity" />
         <activity android:name=".Chiffre" />
         <activity android:name=".CouleurActivity" />
+        <activity android:name=".NumberActivity"/>
+        <activity android:name=".uaPotu"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
